tests/snapshots/render__recall.snap
---
source: tests/render.rs
expression: modal_box(&m).backend()
---
"┌ recall ──────────────────────────────┐"
"│ › Cirno         5m ago  ~/tmp        │"
"│ [recall ⏎] [cancel esc]              │"
"└──────────────────────────────────────┘"
