tests/snapshots/render__search-prompt-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 08     ~~~~~~~~                                 │"
"│                       ││line 09     ~~~~~~~~~                                │"
"│                       ││line 10     ~~~~~~~~~~                               │"
"│                       ││line 11     ~~~~~~~~~~~                              │"
"│                       ││line 12     ~~~~~~~~~~~~                             │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└──── ^] then a key ────┘└ /nee ───────────────────────────────────────────────┘"
